correccion de margin en nav

--- a/game-store-fe/src/components/NavBar/NavBar.css
+++ b/game-store-fe/src/components/NavBar/NavBar.css
@@ -42,6 +42,7 @@
 }
 
 .nav .user-menu-hover {
+  width: 150px;
   position: relative;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
