--- a/game-store-fe/src/app.css
+++ b/game-store-fe/src/app.css
@@ -1,6 +1,6 @@
 .container {
   display: flex;
   justify-content: center;
-  height: 100vh;
-  flex-direction: column;
+  height: 95vh;
+  flex-direction: column;;
 }
