--- a/game-store-fe/src/components/NavBar/NavBar.css
+++ b/game-store-fe/src/components/NavBar/NavBar.css
@@ -1,6 +1,6 @@
 .nav {
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   z-index: 1000;
@@ -16,6 +16,7 @@
 .nav ul {
   display: flex;
   justify-content: space-around;
+  align-items: baseline;
   list-style: none;
   margin: 0 !important;
   padding: 0 !important;
@@ -38,8 +39,8 @@
   color: #ffffff;
 }
 
-.nav li p{
-    cursor: pointer;
+.nav li p {
+  cursor: pointer;
 }
 
 .nav .dropdown {
@@ -72,5 +73,18 @@
 }
 
 .nav .content {
-    margin-top: 5px;
+  margin-top: 5px;
+}
+
+.nav .tittle {
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.nav .tittle:hover,
+.dropdown:hover,
+.link-tittle:hover {
+  color: #ffffff;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
