feat: make web application responsive for mobile devices
- Implemented responsive design adjustments for mobile compatibility
- Added media queries to ensure proper layout and functionality on various screen sizes
- Optimized styles and layout components for mobile usability
- Tested and verified responsive design across different devices and screen resolutions

--- a/game-store-fe/src/app.css
+++ b/game-store-fe/src/app.css
@@ -1,6 +1,15 @@
 .container {
   display: flex;
   justify-content: center;
+  align-items: center;
   height: 95vh;
-  flex-direction: column;;
+  flex-direction: column;
+}
+
+/* Media Query para pantallas pequeñas */
+@media (max-width: 600px) {
+  .container {
+    height: auto;
+    padding: 10px; 
+  }
 }
