--- a/game-store-fe/src/components/ItemList/ItemList.css
+++ b/game-store-fe/src/components/ItemList/ItemList.css
@@ -1,9 +1,6 @@
 .item-list {
   display: grid;
-  grid-template-columns: repeat(
-    auto-fill,
-    minmax(60px, 1fr)
-  ); /* Ajusta el ancho de las columnas según sea necesario */
+  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr)); /* Ajusta el ancho de las columnas según sea necesario */
   grid-gap: 3px; /* Espacio entre elementos */
   grid-auto-flow: dense; /* Colocar elementos en espacios vacíos */
   align-content: start; /* Alinear la última fila en la parte superior */
@@ -17,4 +14,18 @@
 
 .item-list::-webkit-scrollbar {
   display: none;
+}
+
+.item-list {
+  -ms-overflow-style: none; /* Oculta la barra de desplazamiento en IE y Edge */
+  scrollbar-width: none; /* Oculta la barra de desplazamiento en Firefox */
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+  .item-list {
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr)); /* Ajusta el tamaño mínimo de las columnas para pantallas pequeñas */
+    padding: 10px; /* Reduce el padding en pantallas pequeñas */
+    height: auto; /* Ajusta la altura para pantallas pequeñas */
+  }
 }
