--- a/game-store-fe/src/index.css
+++ b/game-store-fe/src/index.css
@@ -10,35 +10,39 @@ body {
   background-color: #221a37 !important;
 }
 
-/* SEARCH BAR */
-
-.search-bar {
-  width: 280px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-right: 40px;
-  padding-left: 10px;
-}
-
-.search-input{
-  border-radius: 5px;
-  border-top: 2px solid #000;
-  padding-left: 10px;
-  margin-left: 10px;
-  height: 30px;
-}
-
-
 .spinner-container {
-  position : absolute;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100% !important;
-  height: 100% !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* MEDIA QUERIES */
+
+@media (max-width: 600px) {
+  body {
+    background-color: #221a37 !important; /* Se puede eliminar !important si no es necesario */
+  }
+
+  .search-bar {
+    width: 100%;
+    margin-right: 0;
+    padding-left: 5px;
+  }
+
+  .search-input {
+    width: calc(100% - 20px);
+    margin-left: 0;
+    height: 30px;
+  }
+
+  .spinner-container {
+    width: 100vw;
+    height: 100vh;
+  }
+}
