--- a/game-store-fe/src/pages/Inventory/Inventory.css
+++ b/game-store-fe/src/pages/Inventory/Inventory.css
@@ -1,87 +1,132 @@
 .inventory-container {
   display: flex;
   justify-content: center;
-  
+  flex-wrap: wrap; /* Permite que los elementos se envuelvan en pantallas más pequeñas */
+}
 
+.inventory {
+  width: 80% !important;
+}
+
+.inventory-header {
+  display: flex;
+  justify-content: flex-start;
+  padding: 10px;
+  width: 100%;
+  background-color: #7749f8;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.toggle-container {
+  position: relative;
+  width: 150px;
+  height: 30px;
+  background-color: #fff;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 15px;
+  padding: 4px;
+}
+
+.toggle-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 85px;
+  font-size: 16px;
+  line-height: 14px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #5d27f3;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  padding: 2px 2px;
+  border-radius: 15px;
+  position: absolute;
+  transition: all 0.3s ease;
+  left: 5px;
+  height: 23px;
+}
+
+.disable {
+  background-color: #5d27f3;
+  left: 60px;
+}
+
+.search-bar {
+  width: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 40px;
+  padding-left: 10px;
+}
+
+.search-input {
+  border-radius: 5px;
+  border-top: 2px solid #000;
+  padding-left: 10px;
+  margin-left: 10px;
+  height: 30px;
+}
+
+.inventory-body {
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  min-height: 69vh;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Media Queries */
+@media (max-width: 680px) {
   .inventory {
-    width: 80% !important;
-  }
-
-  .inventory-header {
-    display: flex;
-    justify-content: flex-start;
-    padding: 10px;
-    background-color: #7749f8;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-
-  .toggle-container {
-    position: relative;
-    width: 150px;
-    height: 30px;
-    background-color: #fff;
-    cursor: pointer;
-    user-select: none;
-    border-radius: 15px;
-    padding: 4px;
-  }
-
-  .toggle-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    width: 85px;
-    font-size: 16px;
-    line-height: 14px;
-    cursor: pointer;
-    color: #fff;
-    background-color: #5d27f3;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    padding: 2px 2px;
-    border-radius: 15px;
-    position: absolute;
-    transition: all 0.3s ease;
-    left: 5px;
-    height: 23px;
-  }
-
-  .disable {
-    background-color: #5d27f3;
-    left: 60px;
-  }
-
-  .search-bar {
-    width: 280px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 40px;
-    padding-left: 10px;
-  }
-
-  .search-input {
-    border-radius: 5px;
-    border-top: 2px solid #000;
-    padding-left: 10px;
-    margin-left: 10px;
-    height: 30px;
+    width: 100% !important;
   }
 
   .inventory-body {
-    width: 100%;
-    height: auto;
-    background-color: #fff;
-    min-height: 69vh;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
+    min-height: 38vh;
   }
-  
+
   .spinner-container {
     position: absolute;
-    top: 50%;
+    top: 28vh;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  .search-bar {
+    width: 65%;
+    margin-right: 0;
+    padding-left: 5px;
+  }
+
+  .search-input {
+    width: calc(100% - 20px);
+    margin-left: 0;
+    height: 30px;
+  }
+
+  .toggle-container {
+    width: 140px;
+    height: 30px;
+  }
+
+  .toggle-btn {
+    width: px;
+    font-size: 14px;
+  }
+
+  .disable {
+    left: 50px;
   }
 }
