--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -1,14 +1,14 @@
-.offer-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 7vh;
-    height: 95vh;
+.offer-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 7vh;
+  height: 95vh;
 }
 
 .offer-list {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   border-radius: 15px;
   overflow: auto;
@@ -17,18 +17,18 @@
 }
 
 .offer-list::-webkit-scrollbar {
-    width: 0; 
+  width: 0;
 }
 
 .table {
   background-color: #fff;
-  margin : 0 !important;
+  margin: 0 !important;
 }
 
 .t-head {
-    position: sticky;
-    top: 0px;
-    z-index: 100;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
 }
 
 .th-id {
@@ -71,20 +71,22 @@
   padding-left: 15px;
 }
 
-.item-container-offer {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(45px, 1fr));
-  grid-gap: 5px;
-  padding-right: 50px;
-}
+.item-container-offer,
 .item-container-request {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(45px, 1fr));
   grid-gap: 5px;
+}
+
+.item-container-offer {
+  padding-right: 50px;
+}
+
+.item-container-request {
   padding-left: 50px;
 }
 
-.page-btn-container{
+.page-btn-container {
   display: flex;
   flex-direction: column;
   margin-top: auto;
@@ -106,14 +108,10 @@
 .td-btn {
   display: table-cell;
   vertical-align: middle;
-  margin-left: auto;
-  margin-right: auto;
-
+  text-align: center;
 }
 
-
 .btn-trade {
-  
   background-color: #5227cc;
   color: #fdfcfe;
   border-radius: 12px;
@@ -145,6 +143,7 @@
 .page-item .active {
   border-color: #5227cc !important;
 }
+
 .pagination li a {
   border-radius: 5px;
   border-color: #5227cc;
@@ -168,4 +167,43 @@
 
 .react-tooltip {
   z-index: 9999;
+}
+
+/* Media Queries */
+@media (max-width: 600px) {
+  .offer-container {
+    padding: 3vh;
+    height: auto;
+  }
+
+  .offer-list {
+    width: 100%;
+    height: 80vh;
+  }
+
+  .th-id, .th-offer {
+    font-size: 18px !important;
+  }
+
+  .td-id {
+    font-size: 20px !important;
+  }
+
+  .item-container-offer, .item-container-request {
+    grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
+  }
+
+  .btn-trade {
+    max-width: 80px;
+    height: 30px;
+    font-size: 14px;
+  }
+
+  .pagination li {
+    font-size: 24px;
+  }
+
+  .page-link, .pagination li a, .pagination li span {
+    font-size: 18px;
+  }
 }
