--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 95%;
-  
+
 
   .om {
     height: 90%;
@@ -55,22 +55,27 @@
 
   /* Estilos para la scrollbar en navegadores Webkit (Chrome, Safari) */
   .FilterContent::-webkit-scrollbar {
-    width: 8px; /* Ancho de la scrollbar */
+    width: 8px;
+    /* Ancho de la scrollbar */
   }
 
   .FilterContent::-webkit-scrollbar-track {
-    background: transparent; /* Fondo de la track */
+    background: transparent;
+    /* Fondo de la track */
   }
 
   .FilterContent::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.425); /* Color de la barrita */
-    border-radius: 10px; /* Bordes redondeados */
+    background-color: rgba(0, 0, 0, 0.425);
+    /* Color de la barrita */
+    border-radius: 10px;
+    /* Bordes redondeados */
   }
 
   /* Eliminar las flechas de desplazamiento en Webkit */
   .FilterContent::-webkit-scrollbar-button {
     display: none;
   }
+
   /* Estilos de la tabla */
   .table {
     width: 100%;
@@ -188,7 +193,6 @@
     border-radius: 10px;
     width: 70px;
     border: 3px solid #311b92;
-    
   }
 
   .confirm-btn {
@@ -313,5 +317,110 @@
     margin-left: 4px;
     cursor: pointer;
     z-index: 2;
+  }
+
+  /* Media Queries */
+  @media (max-width: 768px) {
+    .om-body {
+      flex-direction: column;
+      padding: 2px;
+    }
+
+    .select-body {
+      min-height: 50vh;
+    }
+
+    .select-body,
+    .om-List {
+      width: 100%;
+      max-height: 50vh;
+      border: none;
+    }
+
+    .om-List-header {
+      min-height: 50px;
+    }
+
+    .search-bar {
+      min-height: 60px;
+    }
+
+    .search-input {
+      width: 90%;
+      margin-left: 10px !important;
+      margin-right: 10px !important;
+    }
+
+    .content img {
+      width: 40px;
+    }
+
+    .stage-btn,
+    .confirm-btn {
+      font-size: 14px;
+      width: 60px;
+      margin-top: 5px;
+    }
+
+    .confirm-btn {
+      width: 120px;
+      margin-top: 5px;
+
+    }
+
+    .reset-all,
+    .recicler-all-btn {
+      width: 30px;
+      height: 30px;
+    }
+
+    .reset-all img,
+    .recicler-all img {
+      width: 20px;
+    }
+
+    .add-btn-request {
+      max-width: 120px;
+      font-size: 16px;
+      margin: 5px
+    }
+
+    .item-list {
+      width: 100% !important;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .search-input {
+      width: 80%;
+      margin-left: 5px !important;
+      margin-right: 5px !important;
+    }
+
+    .stage-btn,
+    .confirm-btn {
+      font-size: 12px;
+      width: 50px;
+    }
+
+    .confirm-btn {
+      width: 100px;
+    }
+
+    .reset-all,
+    .recicler-all-btn {
+      width: 25px;
+      height: 25px;
+    }
+    
+    .reset-all img,
+    .recicler-all img {
+      width: 15px;
+    }
+
+    .add-btn-request {
+      max-width: 100px;
+      font-size: 14px;
+    }
   }
 }
