--- a/game-store-fe/src/components/NavBar/NavBar.css
+++ b/game-store-fe/src/components/NavBar/NavBar.css
@@ -113,13 +113,8 @@
   .nav .dropdown-content {
     width: 100%;
     right: 2px;
-    transform: none;    
-  }
-
-  .nav .content {
-    display: flex;
-    align-items: center;
-    width: 100%;
+    transform: none;   
+    top: 25px; 
   }
 
   .nav .tittle {
