--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -205,6 +205,15 @@
   z-index: 9999;
 }
 
+@media (max-width: 785px) and (min-width: 680px) {
+  .item-container-offer, .item-container-request {
+    grid-template-columns: repeat(2, 1fr);
+    padding-left: 0px;
+    padding-right: 5px;
+    padding-top: 5px;
+  }
+}
+
 /* Media Queries */
 @media (max-width: 680px) {
   .offer-container {
