--- a/game-store-fe/src/pages/offerMaker/offerMaker.css
+++ b/game-store-fe/src/pages/offerMaker/offerMaker.css
@@ -19,8 +19,10 @@
   }
 
   .steps {
-    height: 100%;
+    display: flex;
+    height: 95vh;
     margin: auto 0;
+    flex-direction: column;
   }
 
   .search-bar {
@@ -184,8 +186,11 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    margin-top: auto;
+    margin-top: -10px;
     margin-bottom: auto;
+    margin-right: auto;
+    margin-left: auto;
+    width: 80%;
   }
 
   .stage-btn {
