--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -42,6 +42,13 @@
   height: 100% !important;
 }
 
+.no-offer{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .tr-spinner {
   border-color: transparent !important;
 }
