--- a/game-store-fe/src/pages/login/login.css
+++ b/game-store-fe/src/pages/login/login.css
@@ -80,6 +80,19 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(82, 39, 204, 0.5);
   }
+
+  .transparent-div {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    border: 2px solid;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
   
   /* Media Queries */
   @media (max-width: 768px) {
@@ -107,8 +120,17 @@
   
     .buttons-login .login,
     .buttons-login .signin {
-      width: 100%;
+      width: 90%;
       margin-bottom: 10px;
+    }
+  }
+
+  @media (max-width: 680px) {
+    .spinner-container {
+        position: absolute;
+        top: 27vh !important;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
   }
   
@@ -123,21 +145,21 @@
     }
   
     .wrapper-loggin h2 {
-      font-size: 20px;
+      font-size: 25px;
     }
   
     .wrapper-loggin .input-box {
-      width: 100%;
+      width: 90%;
     }
   
     .wrapper-loggin .buttons-login {
       flex-direction: row;
-      width: 100%;
+      width: 90%;
     }
   
     .buttons-login .login,
     .buttons-login .signin {
-      width: 100%;
+      width: 90%;
       height: 40px;
       margin-bottom: 10px;
     }
