--- a/game-store-fe/src/pages/register/register.css
+++ b/game-store-fe/src/pages/register/register.css
@@ -92,6 +92,26 @@
     box-shadow: 0px 0px 5px 0px rgba(82, 39, 204, 0.5);
 }
 
+.transparent-div {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    border: 2px solid;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+@media (max-width: 680px) {
+    .spinner-container {
+        position: absolute;
+        top: 27vh !important;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+  }
 
 @media (max-width: 600px) {
     .wrapper {
