--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -128,6 +128,10 @@
   border: none;
 }
 
+.own-trade {
+  background-color: grey;
+}
+
 .btn-trade.icon {
   display: flex;
   justify-content: center;
