--- a/game-store-fe/src/pages/Offer/offer.css
+++ b/game-store-fe/src/pages/Offer/offer.css
@@ -159,6 +159,19 @@
   filter: invert(1);
 }
 
+.transparent-div {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  border: 2px solid;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
 /* Mostrar botón de texto en pantallas grandes */
 @media (min-width: 600px) {
   .btn-trade {
